--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,27 +6,26 @@ name: Manual workflow
 # or API.
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-        # The data type of the input
-        type: string
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  list-files:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: List files in my-folder
+      run: |
+        # 使用 ls 命令列出 my-folder 中的檔案
+        files=$(ls)
+        echo "$files" > files-list.txt
+        # 或者，將它們輸出為步驟的輸出變數
+        echo "::set-output name=files::$files"
+
+    - name: Upload files list
+      uses: actions/upload-artifact@v2
+      with:
+        name: files-list
+        path: files-list.txt
