--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -12,6 +12,11 @@ jobs:
   update-images-urls:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      pages: write     
+      id-token: write
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -54,8 +59,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.email "summerheadquarters001@gmail.com"
-        git config --global user.name "1ureka"
+        git config --global user.email "github-actions@github.com"
+        git config --global user.name "GitHub Actions"
         git add imagesUrls.json
         git commit -m "Update imagesUrls.json"
         git push
