--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -14,8 +14,10 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
     # Runs a single command using the runners shell
     - name: Send greeting
       run: ls
