--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -45,7 +45,7 @@ jobs:
 
             imagePaths[subfolder] = jpgPaths;
           } catch (error) {
-            console.error(`Error reading image files in ${subfolder}:`, error);
+            console.log("Error reading image files");
           }
         }
 
