--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -12,6 +12,11 @@ jobs:
   update-images-urls:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      pages: write     
+      id-token: write
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
