--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,59 +1,12 @@
-name: Update urls and push to deploy
-
+name: push to deploy
 on:
   workflow_dispatch:
-
 permissions:
   contents: write
-  pages: write
-  id-token: write
-
 jobs:
-  update-images-urls:
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Update imagesUrls.json
-        run: node js/build.mjs
-
-      - name: Commit and push changes
-        run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-
-          # 檢查是否有更改
-          if [[ $(git status --porcelain) ]]; then
-            git add imagesUrls.json
-            git commit -m "Update imagesUrls.json"
-            git push
-          else
-            echo "No changes to commit."
-          fi
-
-  report-urls-json:
-    needs: update-images-urls
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Report URLs JSON
-        run: cat imagesUrls.json
-
-  push-to-deploy:
-    needs: update-images-urls
-    concurrency: ci-${{ github.ref }}
-    runs-on: ubuntu-latest
-
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
